# geup-ddong-seoul-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: update_snapshot.py
seoul_toilet/: __init__.py  data.py  server.py
seoul_toilet/seed/: contents.xlsx
tests/: test_logic.py
